--- a/tailwind.css
+++ b/tailwind.css
@@ -599,6 +599,10 @@ video {
   margin-right: 0.5rem;
 }
 
+.-ml-6 {
+  margin-left: -1.5rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -613,6 +617,22 @@ video {
 
 .mr-8 {
   margin-right: 2rem;
+}
+
+.-ml-4 {
+  margin-left: -1rem;
+}
+
+.-ml-2 {
+  margin-left: -0.5rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .block {
