--- a/tailwind.css
+++ b/tailwind.css
@@ -695,10 +695,6 @@ video {
   height: 500px;
 }
 
-.h-\[700px\] {
-  height: 700px;
-}
-
 .h-\[72px\] {
   height: 72px;
 }
@@ -714,10 +710,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[full\] {
-  height: full;
 }
 
 .w-1 {
@@ -1090,6 +1082,10 @@ video {
 }
 
 .chevron-down {
+  display: none;
+}
+
+#sideNav.sidenav-collapsed {
   display: none;
 }
 
