--- a/tailwind.css
+++ b/tailwind.css
@@ -554,6 +554,10 @@ video {
   --tw-contain-style:  ;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .fixed {
   position: fixed;
 }
@@ -1087,6 +1091,14 @@ video {
 
 #sideNav.sidenav-collapsed {
   display: none;
+}
+
+#design-menu {
+  display: none;
+}
+
+#design-menu.visible {
+  display: block;
 }
 
 nav #fab {
