--- a/style.css
+++ b/style.css
@@ -48,6 +48,16 @@ nav:hover #fab {
   width: 68px;
 }
 
+#naviation-top {
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+#naviation-top::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
+}
+
 #sideNav.sidenav-collapsed #naviation-bottom {
   flex-direction: column;
 }
