--- a/tailwind.css
+++ b/tailwind.css
@@ -1132,6 +1132,19 @@ nav:hover #fab {
   width: 68px;
 }
 
+#naviation-top {
+  overflow-y: scroll;
+  scrollbar-width: none;
+  /* Firefox */
+  -ms-overflow-style: none;
+  /* Internet Explorer 10+ */
+}
+
+#naviation-top::-webkit-scrollbar {
+  display: none;
+  /* Safari and Chrome */
+}
+
 #sideNav.sidenav-collapsed #naviation-bottom {
   flex-direction: column;
 }
