--- a/tailwind.css
+++ b/tailwind.css
@@ -574,12 +574,12 @@ video {
   position: relative;
 }
 
-.-right-4 {
-  right: -1rem;
-}
-
 .-right-8 {
   right: -2rem;
+}
+
+.-right-\[15px\] {
+  right: -15px;
 }
 
 .bottom-2 {
@@ -600,26 +600,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.-right-\[4\] {
-  right: -4;
-}
-
-.-right-\[18px\] {
-  right: -18px;
-}
-
-.-right-\[16px\] {
-  right: -16px;
-}
-
-.-right-\[14px\] {
-  right: -14px;
-}
-
-.-right-\[15px\] {
-  right: -15px;
 }
 
 .z-50 {
@@ -723,8 +703,8 @@ video {
   height: 2.25rem;
 }
 
-.h-\[16px\] {
-  height: 16px;
+.h-\[18px\] {
+  height: 18px;
 }
 
 .h-\[32px\] {
@@ -750,10 +730,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[18px\] {
-  height: 18px;
 }
 
 .w-1 {
@@ -788,8 +764,8 @@ video {
   width: 2rem;
 }
 
-.w-\[16px\] {
-  width: 16px;
+.w-\[18px\] {
+  width: 18px;
 }
 
 .w-\[246px\] {
@@ -802,10 +778,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[18px\] {
-  width: 18px;
 }
 
 .max-w-6 {
@@ -1149,6 +1121,10 @@ video {
   transition-duration: 300ms;
 }
 
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .chevron-down {
   display: none;
 }
@@ -1454,14 +1430,25 @@ menu {
   display: flex;
 }
 
-.hover\:border-gray-500:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(105 117 134 / var(--tw-border-opacity));
+#header {
+  transition: margin-left 300ms ease-in-out;
 }
 
-.hover\:border-gray-400:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(154 164 178 / var(--tw-border-opacity));
+#header.shorter-width.sidenav-collapsed {
+  margin-left: 68px;
+}
+
+#header.shorter-width {
+  margin-left: 288px;
+}
+
+#sideNav.to-top {
+  margin-top: -72px;
+  height: 100vh;
+}
+
+.no-transition * {
+  transition: none !important;
 }
 
 .hover\:border-gray-600:hover {
